--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^3.0.3",
+    "bootstrap": "^5.3.8",
+    "firebase": "^12.6.0",
+    "pinia": "^3.0.4",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
